# second-brain

./: .gitignore  CLAUDE.md  README.md  proposal_secondBrain_v3.docx  pyproject.toml  requirements-lock.txt
Documentation/: decisionsLog_phase1_phase2.docx  decisionsLog_preBuildFinal.docx  phase2_pipeline_explained.docx  proposal_secondBrain_revised.docx  second_brain_pipeline_and_market.docx
docs/: phase2_classifier_results.md  week3_finetuning_results.md  week3_presentation_prep.md
src/second_brain/: classifier.py  classifier_eval.py  classify_corpus.py  compare_embedders.py  embed_corpus.py  goemotions_pairs.py  label_cli.py  labeling.py  parser.py  query_corpus.py  train_embedder.py
tests/: test_classifier_eval.py  test_goemotions_pairs.py  test_labeling.py  test_parser.py
